--- a/api/package.json
+++ b/api/package.json
@@ -23,6 +23,11 @@
     "typescript": "^4.7.3"
   },
   "dependencies": {
-    "express": "^4.18.1"
+    "bcrypt": "^5.0.1",
+    "dotenv": "^16.0.1",
+    "express": "^4.18.1",
+    "joi": "^17.6.0",
+    "jsonwebtoken": "^8.5.1",
+    "mongoose": "^6.3.5"
   }
 }
