--- a/api/package.json
+++ b/api/package.json
@@ -28,6 +28,7 @@
     "express": "^4.18.1",
     "joi": "^17.6.0",
     "jsonwebtoken": "^8.5.1",
-    "mongoose": "^6.3.5"
+    "mongoose": "^6.3.5",
+    "swagger-ui-express": "^4.4.0"
   }
 }
