--- a/ui/pubspec.yaml
+++ b/ui/pubspec.yaml
@@ -1,4 +1,4 @@
-name: weather_tracker
+name: weight_tracker
 description: A simple weight tracking app
 
 # The following line prevents the package from being accidentally published to
@@ -40,6 +40,7 @@ dependencies:
   get_it: ^7.2.0
   auto_route: ^4.0.1
   dartz: ^0.10.1
+  flutter_secure_storage: ^5.0.2
 
 dev_dependencies:
   flutter_test:
