--- a/ui/pubspec.yaml
+++ b/ui/pubspec.yaml
@@ -41,6 +41,7 @@ dependencies:
   auto_route: ^4.0.1
   dartz: ^0.10.1
   flutter_secure_storage: ^5.0.2
+  http: ^0.13.4
 
 dev_dependencies:
   flutter_test:
