--- a/api/package.json
+++ b/api/package.json
@@ -23,6 +23,7 @@
     "typescript": "^4.7.3"
   },
   "dependencies": {
+    "cors": "^2.8.5",
     "bcrypt": "^5.0.1",
     "dotenv": "^16.0.1",
     "express": "^4.18.1",
