--- a/ui/pubspec.yaml
+++ b/ui/pubspec.yaml
@@ -42,6 +42,10 @@ dependencies:
   dartz: ^0.10.1
   flutter_secure_storage: ^5.0.2
   http: ^0.13.4
+  freezed: ^2.0.3+1
+  freezed_annotation: ^2.0.3
+  form_bloc: ^0.30.0
+  flutter_form_bloc: ^0.30.1
 
 dev_dependencies:
   flutter_test:
@@ -56,8 +60,6 @@ dev_dependencies:
   auto_route_generator: ^4.0.0
   build_runner: ^2.1.11
   json_serializable: ^6.2.0
-  freezed: ^2.0.3+1
-  freezed_annotation: ^2.0.3
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
