--- a/ui/pubspec.yaml
+++ b/ui/pubspec.yaml
@@ -46,6 +46,7 @@ dependencies:
   freezed_annotation: ^2.0.3
   form_bloc: ^0.30.0
   flutter_form_bloc: ^0.30.1
+  line_chart: ^1.1.11
 
 dev_dependencies:
   flutter_test:
