feat(ui): setting up UI in docker compose

--- a/ui/Makefile
+++ b/ui/Makefile
@@ -1,2 +1,5 @@
 generate:
 	flutter packages pub run build_runner build --verbose --delete-conflicting-outputs
+
+build_web:
+	flutter build web --dart-define="API=localhost:4002"
